--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "chatgpt",
+  "name": "buscasofa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://luispedraza.github.io/buscasofa",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "e2e": "npx cypress open"
+    "e2e": "npx cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "leaflet": "^1.9.4",
@@ -22,10 +25,12 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "cypress": "^14.3.3",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
